Fixed most popular overflowing on mobile devices

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -326,7 +326,7 @@ footer {
   }
 
   .right, .courses {
-    padding-top: 3vh;
+    padding-top: 1.5vh;
     box-sizing: border-box;
   }
 
